# uni.2021.hochleistungsrechner

./: .gitignore  CMakeLists.txt  README.md
hlr.exercise.02/: feedback.txt  gdb-ausgabe.txt  pde-error.txt  simple-error.txt
hlr.exercise.02/broken-pde/: askparams.c  partdiff-seq.c
hlr.exercise.02/simple/: simple.c
hlr.exercise.03/: antworten.txt  feedback.txt  job_script  leistungsoptimierung.txt
hlr.exercise.03/pde/: Makefile  askparams.c  displaymatrix.c  function.data  partdiff-seq.c  partdiff-seq.h
hlr.exercise.03/shell/: job_script  timescript.out  timescript.sh
hlr.exercise.04/: Makefile  Makefile.karl  hello.c  messung.1.sh  messung.2.sh  partdiff-karl.c  partdiff.c  zzz.out.512.10240.single-core.txt  zzz.out.512.10240.txt  zzz.out.txt  zzz.right.txt
hlr.exercise.04/messung.1-old/: messung.1.threads-10.txt  messung.1.threads-12.txt  messung.1.threads-3.txt  messung.1.threads-5.txt  messung.1.threads-7.txt
hlr.exercise.05/: Makefile  messung.sh  partdiff-openmp.c  partdiff-schedule.c  partdiff.c  zzz.openmp.100.txt  zzz.openmp.1000.txt  zzz.openmp.10240.txt  zzz.openmp.2.txt  zzz.openmp.txt  zzz.posix.100.txt  zzz.posix.10240.txt  zzz.posix.2.txt  zzz.posix.txt  zzz.schedule.2.txt
hlr.exercise.06/: Makefile  mpi.slurm  timempi.c  timempi2.c
hlr.exercise.07/: Makefile  circle.backup.c  circle.c  mpi.slurm
hlr.exercise.08/: partdiff-karl.c
hlr.exercise.09/: Makefile  partdiff-karl.c  partdiff.c
hr-2021-uebungsblatt-01-materialien/: CMakeLists.txt
hr.exercise.01/: CMakeLists.txt
hr.exercise.02/: CMakeLists.txt
(+158 files in other folders)
